--- a/src/app/views/theme/controlVisitas/controlVisitas.component.html
+++ b/src/app/views/theme/controlVisitas/controlVisitas.component.html
@@ -16,9 +16,9 @@
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Mark y hijos</td>
-        <td>Primos </td>
-        <td>Auto</td>
+        <td>Fernando Alarcon</td>
+        <td>Jefe de IT</td>
+        <td>Carro</td>
         <td>--</td>
         <td >
           <button class="ms-2 btn btn-success text-white">Marcar llegada</button>
@@ -27,9 +27,9 @@
       </tr>
       <tr>
         <th scope="row">1</th>
-        <td>Larry</td>
-        <td>Amigo </td>
-        <td>Moto</td>
+        <td>Nancy Bonilla</td>
+        <td>Supervisora </td>
+        <td>Carro</td>
         <td>09:45 am</td>
         <td >
           <button class="ms-2 btn btn-warning text-white">Marcar Salida</button>
@@ -38,9 +38,20 @@
       </tr>
       <tr>
         <th scope="row">3</th>
-        <td>Thornton</td>
-        <td>Vendedor ambulante</td>
-        <td>Bicicleta</td>
+        <td>Selvin Medina</td>
+        <td>Vendedor de Servidores</td>
+        <td>Moto</td>
+        <td></td>
+        <td >
+          <button class="ms-2 btn btn-success text-white">Marcar llegada</button>
+          <button class="ms-2 btn btn-danger text-white">Eliminar</button>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row">4</th>
+        <td>Javier Sanchez</td>
+        <td>IT</td>
+        <td>Carro</td>
         <td></td>
         <td >
           <button class="ms-2 btn btn-success text-white">Marcar llegada</button>
