--- a/src/app/views/theme/usuarios/usuarios.component.html
+++ b/src/app/views/theme/usuarios/usuarios.component.html
@@ -15,8 +15,8 @@
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
+        <td>Javier</td>
+        <td>Sanchez</td>
         <td>Administrador</td>
         <td >
           <button class="ms-2 btn btn-danger text-white">Eliminar</button>
@@ -24,8 +24,8 @@
       </tr>
       <tr>
         <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
+        <td>Nancy</td>
+        <td>Bonilla</td>
         <td>Residente</td>
         <td >
           <button class="ms-2 btn btn-danger text-white">Eliminar</button>
@@ -33,9 +33,18 @@
       </tr>
       <tr>
         <th scope="row">3</th>
-        <td>Larry the Bird</td>
-        <td>Thornton</td>
+        <td>Selvin</td>
+        <td>Medina</td>
         <td>Guardia</td>
+        <td >
+          <button class="ms-2 btn btn-danger text-white">Eliminar</button>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row">4</th>
+        <td>Fernando</td>
+        <td>Alarcon</td>
+        <td>Auditor</td>
         <td >
           <button class="ms-2 btn btn-danger text-white">Eliminar</button>
         </td>
