--- a/src/app/views/theme/controlVisitas/controlVisitas.component.html
+++ b/src/app/views/theme/controlVisitas/controlVisitas.component.html
@@ -8,53 +8,54 @@
         <th scope="col">Id Solicitud</th>
         <th scope="col">Visita</th>
         <th scope="col">Descripcion</th>
-        <th scope="col">Tipo de Transaporte</th>
         <th scope="col">hora de llegada</th>
+        <th scope="col">hora de Salida</th>
+        <th scope="col">Tipo de Transaporte</th>
+        <th scope="col">no de placa</th>
+        <th scope="col"> Aprobada? </th>
         <th scope="col">Opciones</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Fernando Alarcon</td>
-        <td>Jefe de IT</td>
-        <td>Carro</td>
+        <td>Mark y hijos</td>
+        <td>Primos </td>
+        <td>10:00 am </td>
+        <td>01:00 pm </td>
+        <td>Auto</td>
         <td>--</td>
+        <td>PENDIENTE</td>
         <td >
-          <button class="ms-2 btn btn-success text-white">Marcar llegada</button>
+          <button class="ms-2 btn  text-white" style="background-color: rgb(71, 100, 179);">Marcar llegada</button>
           <button class="ms-2 btn btn-danger text-white">Eliminar</button>
         </td>
       </tr>
       <tr>
         <th scope="row">1</th>
-        <td>Nancy Bonilla</td>
-        <td>Supervisora </td>
-        <td>Carro</td>
-        <td>09:45 am</td>
+        <td>Larry</td>
+        <td>Amigo </td>
+        <td>10:00 am </td>
+        <td>01:00 pm </td>
+        <td>Auto</td>
+        <td>1231234</td>
+        <td>APROBADA</td>
         <td >
-          <button class="ms-2 btn btn-warning text-white">Marcar Salida</button>
+          <button class="ms-2 btn  text-white" style="background-color: rgb(131, 131, 25);">Marcar Salida</button>
           <button class="ms-2 btn btn-danger text-white">Eliminar</button>
         </td>
       </tr>
       <tr>
         <th scope="row">3</th>
-        <td>Selvin Medina</td>
-        <td>Vendedor de Servidores</td>
-        <td>Moto</td>
-        <td></td>
+        <td>Thornton</td>
+        <td>Vendedor ambulante</td>
+        <td>10:00 am </td>
+        <td>01:00 pm </td>
+        <td>Auto</td>
+        <td>12312434</td>
+        <td>DENEGADA</td>
         <td >
-          <button class="ms-2 btn btn-success text-white">Marcar llegada</button>
-          <button class="ms-2 btn btn-danger text-white">Eliminar</button>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row">4</th>
-        <td>Javier Sanchez</td>
-        <td>IT</td>
-        <td>Carro</td>
-        <td></td>
-        <td >
-          <button class="ms-2 btn btn-success text-white">Marcar llegada</button>
+          <button class="ms-2 btn  text-white" style="background-color: rgb(71, 100, 179);">Marcar llegada</button>
           <button class="ms-2 btn btn-danger text-white">Eliminar</button>
         </td>
       </tr>
