--- a/src/app/views/theme/usuarios/usuarios.component.html
+++ b/src/app/views/theme/usuarios/usuarios.component.html
@@ -1,6 +1,7 @@
 <div class="fade-in">
-  <c-card class="mb-4">
-    <c-card-header>
+  <div class="w-full d-flex  justify-content-end">
+    <button class="ms-2 btn btn-secondary text-white " style="background-color: rgb(65, 120, 192);" (click)="cambiarVistaRegistro()">Agregar nuevo usuario</button>
+  </div>
 <div class="fade-in">
   <table class="table">
     <thead>
@@ -15,37 +16,31 @@
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Javier</td>
-        <td>Sanchez</td>
+        <td>Mark</td>
+        <td>Otto</td>
         <td>Administrador</td>
         <td >
+          <button class="ms-2 btn btn-secondary text-white" (click)="toggleLiveDemo()">Editar</button>
           <button class="ms-2 btn btn-danger text-white">Eliminar</button>
         </td>
       </tr>
       <tr>
         <th scope="row">2</th>
-        <td>Nancy</td>
-        <td>Bonilla</td>
+        <td>Jacob</td>
+        <td>Thornton</td>
         <td>Residente</td>
         <td >
+          <button class="ms-2 btn btn-secondary text-white" (click)="toggleLiveDemo()">Editar</button>
           <button class="ms-2 btn btn-danger text-white">Eliminar</button>
         </td>
       </tr>
       <tr>
         <th scope="row">3</th>
-        <td>Selvin</td>
-        <td>Medina</td>
+        <td>Larry the Bird</td>
+        <td>Thornton</td>
         <td>Guardia</td>
         <td >
-          <button class="ms-2 btn btn-danger text-white">Eliminar</button>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row">4</th>
-        <td>Fernando</td>
-        <td>Alarcon</td>
-        <td>Auditor</td>
-        <td >
+          <button class="ms-2 btn btn-secondary text-white" (click)="toggleLiveDemo()">Editar</button>
           <button class="ms-2 btn btn-danger text-white">Eliminar</button>
         </td>
       </tr>
@@ -55,7 +50,6 @@
 
   
 </div>
-</c-card-header>
-  </c-card>
 </div>
 
+<app-usuarios-form  ></app-usuarios-form>
