--- a/src/app/views/theme/notificarVisitas/notificarVisitas.component.html
+++ b/src/app/views/theme/notificarVisitas/notificarVisitas.component.html
@@ -16,12 +16,38 @@
                      placeholder="nombre del residente"
                      type=""
               />
+
+              <label cLabel for="exampleFormControlInput1" class="mt-3">Identidad</label>
+              <input cFormControl
+                    class="form-control "
+                     id="exampleFormControlInput1"
+                     placeholder="identidad"
+                     type=""
+              />
               
+
+              <label cLabel for="exampleFormControlInput1" class="mt-3">Nombre Empresa (si aplica)</label>
+              <input cFormControl
+                    class="form-control "
+                     id="exampleFormControlInput1"
+                     placeholder="Nombre de la empresa ( opcional )"
+                     type=""
+              />
+
               <label cLabel for="exampleFormControlInput1 " class="mt-3">Tipo Transporte:</label>
               <select name="" id="" class="selector form-control form-select ">
-                <option value="">Carro</option>
+                <option value="">Auto</option>
                 <option value="">Moto</option>
+                <option value="">Bicicleta</option>
               </select>
+
+              <label cLabel for="exampleFormControlInput1 " class="mt-3">No de placa:</label>
+              <input cFormControl
+                    class="form-control "
+                     id="exampleFormControlInput1"
+                     placeholder="numero de placa"
+                     type=""
+              />
 
               <label cLabel for="exampleFormControlInput1" class="mt-3">Fecha Entrada:</label>
               <input cFormControl
@@ -43,7 +69,7 @@
               <label cLabel for="exampleFormControlInput1" class="mt-3">Comentario adicional:</label>
               <textarea cFormControl class="form-control "></textarea>
             
-
+          
               <button class="btn btn-primary mt-2">Notificar Visita</button>
             </div>
 
