--- a/src/app/views/theme/roles/buttons.component.html
+++ b/src/app/views/theme/roles/buttons.component.html
@@ -34,7 +34,7 @@
       </c-card-header>
       <c-card-body>
         <p class="text-medium-emphasis small ">
-          Usuario que puede ver todas las visitas agendadas en el sistema/
+          Usuario que puede ver todas las visitas agendadas en el sistema.
         </p>
       </c-card-body>
     </c-card>
