--- a/src/app/views/theme/usuarios/usuarios.component.html
+++ b/src/app/views/theme/usuarios/usuarios.component.html
@@ -16,8 +16,8 @@
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
+        <td>Fernando</td>
+        <td>Alarcon</td>
         <td>Administrador</td>
         <td >
           <button class="ms-2 btn btn-secondary text-white" (click)="toggleLiveDemo()">Editar</button>
@@ -26,8 +26,8 @@
       </tr>
       <tr>
         <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
+        <td>Nancy</td>
+        <td>Bonilla</td>
         <td>Residente</td>
         <td >
           <button class="ms-2 btn btn-secondary text-white" (click)="toggleLiveDemo()">Editar</button>
@@ -36,8 +36,8 @@
       </tr>
       <tr>
         <th scope="row">3</th>
-        <td>Larry the Bird</td>
-        <td>Thornton</td>
+        <td>Selvin</td>
+        <td>Medina</td>
         <td>Guardia</td>
         <td >
           <button class="ms-2 btn btn-secondary text-white" (click)="toggleLiveDemo()">Editar</button>
