--- a/src/app/views/theme/controlVisitas/controlVisitas.component.html
+++ b/src/app/views/theme/controlVisitas/controlVisitas.component.html
@@ -19,10 +19,10 @@
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Mark y hijos</td>
-        <td>Primos </td>
-        <td>10:00 am </td>
-        <td>01:00 pm </td>
+        <td>Liberty Networks</td>
+        <td>Escuadrilla</td>
+        <td>10:00 am</td>
+        <td>01:00 pm</td>
         <td>Auto</td>
         <td>--</td>
         <td>PENDIENTE</td>
@@ -33,10 +33,10 @@
       </tr>
       <tr>
         <th scope="row">1</th>
-        <td>Larry</td>
-        <td>Amigo </td>
-        <td>10:00 am </td>
-        <td>01:00 pm </td>
+        <td>Sycom</td>
+        <td>Proveedor</td>
+        <td>10:00 am</td>
+        <td>01:00 pm</td>
         <td>Auto</td>
         <td>1231234</td>
         <td>APROBADA</td>
@@ -47,8 +47,8 @@
       </tr>
       <tr>
         <th scope="row">3</th>
-        <td>Thornton</td>
-        <td>Vendedor ambulante</td>
+        <td>Acosa</td>
+        <td>Vendedor</td>
         <td>10:00 am </td>
         <td>01:00 pm </td>
         <td>Auto</td>
