--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -15,7 +15,7 @@
     <c-header-nav class="d-none d-lg-flex me-auto">
       <c-nav-item>
         <a cNavLink routerLink="/dashboard" routerLinkActive="active">
-          Dashboard
+          Inicio
         </a>
       </c-nav-item>
    
@@ -70,12 +70,12 @@
     </button>
     <ul cDropdownMenu class="pt-0 pr-5 w-auto">
       <li>
-        <h6 cDropdownHeader class="bg-light fw-semibold py-2">Account</h6>
+        <h6 cDropdownHeader class="bg-light fw-semibold py-2">Cuenta</h6>
       </li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilBell"></svg>
-          Updates
+          Visitas
           <c-badge class="ms-2 float-end" color="info">
             42
           </c-badge>
@@ -84,71 +84,54 @@
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilEnvelopeOpen"></svg>
-          Messages
+          Mensajes
           <c-badge class="ms-2 float-end" color="success">
-            42
+            25
           </c-badge>
         </a>
       </li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilTask"></svg>
-          Tasks
+          Aprobar
           <c-badge class="ms-2 float-end" color="danger">
-            42
+            15
           </c-badge>
         </a>
       </li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name='cilCommentSquare'></svg>
-          Comments
+          Comentarios
           <c-badge class="ms-auto" color="warning">
-            42
+            28
           </c-badge>
         </a>
       </li>
       <li>
-        <h6 cDropdownHeader class="bg-light fw-semibold py-2">Settings</h6>
+        <h6 cDropdownHeader class="bg-light fw-semibold py-2">Configurar</h6>
       </li>
       <li></li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilUser"></svg>
-          Profile
+          Perfil
         </a>
       </li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilSettings"></svg>
-          Settings
+          Configurar
         </a>
       </li>
-      <li>
-        <a routerLink="./" cDropdownItem>
-          <svg cIcon class="me-2" name="cilCreditCard"></svg>
-          Payments
-          <c-badge class="ms-2 float-end" color="secondary">
-            42
-          </c-badge>
-        </a>
-      </li>
-      <li>
-        <a routerLink="./" cDropdownItem>
-          <svg cIcon class="me-2" name="cilFile"></svg>
-          Projects
-          <c-badge class="ms-2 float-end" color="primary">
-            42
-          </c-badge>
-        </a>
-      </li>
+      
       <li>
         <hr cDropdownDivider/>
       </li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilLockLocked"></svg>
-          Lock Account
+          Cerrar Sesion
         </a>
       </li>
       <li></li>
