--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -45,6 +45,12 @@
           <c-card [ngStyle]="{'width.%': 44}" class="text-white bg-primary py-5">
             <c-card-body class="text-center">
 
+              <c-card class="mb-4">
+                <c-card-body class="text-center">
+                  <img src="assets/img/personal/Login.png" alt="imagen" class="img-fluid mx-auto">
+                </c-card-body>
+              </c-card>
+
             </c-card-body>
           </c-card>
         </c-card-group>
