--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -30,7 +30,7 @@
                 <c-row>
                   <c-col xs="6">
                     <button cButton class="px-4" color="primary">
-                      Entrar
+                      Ingresar
                     </button>
                   </c-col>
                   <c-col class="text-right" xs="6">
