--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -15,7 +15,7 @@
     <c-header-nav class="d-none d-lg-flex me-auto">
       <c-nav-item>
         <a cNavLink routerLink="/dashboard" routerLinkActive="active">
-          Inicio
+          Dashboard
         </a>
       </c-nav-item>
    
@@ -70,12 +70,12 @@
     </button>
     <ul cDropdownMenu class="pt-0 pr-5 w-auto">
       <li>
-        <h6 cDropdownHeader class="bg-light fw-semibold py-2">Cuenta</h6>
+        <h6 cDropdownHeader class="bg-light fw-semibold py-2">Account</h6>
       </li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilBell"></svg>
-          Visitas
+          Updates
           <c-badge class="ms-2 float-end" color="info">
             42
           </c-badge>
@@ -84,54 +84,71 @@
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilEnvelopeOpen"></svg>
-          Mensajes
+          Messages
           <c-badge class="ms-2 float-end" color="success">
-            25
+            42
           </c-badge>
         </a>
       </li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilTask"></svg>
-          Aprobar
+          Tasks
           <c-badge class="ms-2 float-end" color="danger">
-            15
+            42
           </c-badge>
         </a>
       </li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name='cilCommentSquare'></svg>
-          Comentarios
+          Comments
           <c-badge class="ms-auto" color="warning">
-            28
+            42
           </c-badge>
         </a>
       </li>
       <li>
-        <h6 cDropdownHeader class="bg-light fw-semibold py-2">Configurar</h6>
+        <h6 cDropdownHeader class="bg-light fw-semibold py-2">Settings</h6>
       </li>
       <li></li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilUser"></svg>
-          Perfil
+          Profile
         </a>
       </li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilSettings"></svg>
-          Configurar
+          Settings
         </a>
       </li>
-      
+      <li>
+        <a routerLink="./" cDropdownItem>
+          <svg cIcon class="me-2" name="cilCreditCard"></svg>
+          Payments
+          <c-badge class="ms-2 float-end" color="secondary">
+            42
+          </c-badge>
+        </a>
+      </li>
+      <li>
+        <a routerLink="./" cDropdownItem>
+          <svg cIcon class="me-2" name="cilFile"></svg>
+          Projects
+          <c-badge class="ms-2 float-end" color="primary">
+            42
+          </c-badge>
+        </a>
+      </li>
       <li>
         <hr cDropdownDivider/>
       </li>
       <li>
         <a routerLink="./" cDropdownItem>
           <svg cIcon class="me-2" name="cilLockLocked"></svg>
-          Cerrar Sesion
+          Lock Account
         </a>
       </li>
       <li></li>
