--- a/src/app/views/theme/roles/roles.component.html
+++ b/src/app/views/theme/roles/roles.component.html
@@ -1,5 +1,5 @@
 <c-row ngPreserveWhitespaces>
-  <h1>Roles</h1>
+  <h1 class=" font-bold text-4xl">Roles</h1>
   <small>Breve descripcion de los roles del sistema.</small>
   <c-col xs="12">
   </c-col>
@@ -30,11 +30,23 @@
   <c-col xs="12">
     <c-card class="mb-4" id="AngularButtonWithIcons">
       <c-card-header>
+        <strong>Auditor</strong>
+      </c-card-header>
+      <c-card-body>
+        <p class="text-medium-emphasis small ">
+          Usuario que puede ver todas las visitas agendadas en el sistema y puede ver los reportes de las visitas.
+        </p>
+      </c-card-body>
+    </c-card>
+  </c-col>
+  <c-col xs="12">
+    <c-card class="mb-4" id="AngularButtonWithIcons">
+      <c-card-header>
         <strong>Guardia</strong>
       </c-card-header>
       <c-card-body>
         <p class="text-medium-emphasis small ">
-          Usuario que puede ver todas las visitas agendadas en el sistema/
+          Usuario que puede ver todas las visitas agendadas en el sistema.
         </p>
       </c-card-body>
     </c-card>
