--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -21,3 +21,7 @@ $enable-rtl: true;
 
 // If you want to add something do it here
 @import "custom";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
